compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_constructors3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1096
expression: "type Boxy { Box(Int) Box(Float) }"

---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:13
  │
1 │ type Boxy { Box(Int) Box(Float) }
  │             ^^^^^^^^ ^^^^^^^^^^ Redefined here
  │             │         
  │             First defined here

`Box` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

